[package]
name = "newProject"  # Make sure this is the actual project name
version = "0.1.0"
edition = "2021"

[dependencies]
soroban-sdk = { version = "21.2.0", default-features = false }  # Correct version with no_std
stellar-xdr = { version = "21.2.0", default-features = false }  # Ensure no_std is enabled for stellar-xdr
serde = "1.0"
serde_json = "1.0"

[profile.release]
opt-level = "z"
lto = true
panic = "abort"
overflow-checks = true
debug-assertions = false
